# golf-analytics-platform

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  WRITING-STYLE.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 808b57c7b9d5_initial_schema.py
backend/app/: config.py  logging.py  main.py
backend/app/api/v1/: analytics.py  betting.py  deps.py  health.py  (+7 more)
backend/app/cache/: redis.py
backend/app/cli/: backtest.py  bootstrap.py  diagnose.py  train.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: enums.py  models.py
backend/app/features/: base.py  dg_preds.py  feature_sets.py  player.py  primitives.py
backend/app/ml/: backtest.py  base.py  calibration.py  diagnostics.py  registry.py  trainer.py  training.py
backend/app/providers/: base.py  caching.py  factory.py
backend/app/services/: betting.py  board_archive.py  catalog.py  features.py  forward_track_record.py  predictions.py  track_record.py
backend/app/simulation/: engine.py  service.py
backend/models/golf_v1/: _active.txt
backend/tests/: conftest.py  test_analytics_endpoint.py  test_backtest.py  test_betting.py  test_betting_endpoint.py  test_board_archive.py  test_caching_provider.py  test_calibration.py  test_catalog_endpoints.py  test_datagolf_provider.py  test_feature_extractor.py  test_features.py  test_forward_backfill_endpoint.py  test_health.py  test_ml.py  test_prediction_endpoint.py  test_prediction_service.py  test_rank_eval.py  test_simulation.py  test_simulation_endpoint.py  test_trainer.py  test_training.py
backend/tests/calibration/: test_mock_calibration.py
backend/tests/contract/: base.py  test_mock_provider.py
(+91 files in other folders)
